AP-127 renames parameter Document to document and changes type to object with specified keys in /bff/admin/v1/server-db/iamuserapp/${IAM_iam_user_app_id} and /bff/app_access/v1/server-db/iamuserapp/${IAM_iam_user_app_id} in OpenApi.json, updates UserPreferenceSave() in common_app_dialogues_user_menu_iam_user_app.js and updates parameters and adds tree shaking pattern to document keys in post() and update() in IamUserApp.js to satisfy OWASP requirement 15.3.5, updates naming standard in 5.development.md, updates server_db_table_IamUserApp type and add Custom key for individual app custom data in types.js, adds COMMON_GLOBAL.user_custom and updates commonUserLoginApp() in public/js/common.js and updates CommonGlobal in common_types.js
