# server/install/default/OpenApi.json
@@ -2019,9 +2019,26 @@
                                             "IAM_iam_user_id": {
                                                 "$ref": "#/components/parameters/paths/IAM_iam_user_id"
                                             },
-                                            "Document":{
+                                            "document":{
                                                 "required":true,
-                                                "type":"string"
+                                                "type":"object",
+                                                "properties": {
+                                                    "preference_locale": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_timezone": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_direction": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_arabic_script": {
+                                                        "type": "string"
+                                                    },
+                                                    "custom": {
+                                                        "type": "string"
+                                                    }
+                                                }
                                             }
                                         }
                                     }
@@ -3307,9 +3324,26 @@
                                             "IAM_iam_user_id": {
                                                 "$ref": "#/components/parameters/paths/IAM_iam_user_id"
                                             },
-                                            "Document":{
+                                            "document":{
                                                 "required":true,
-                                                "type":"string"
+                                                "type":"object",
+                                                "properties": {
+                                                    "preference_locale": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_timezone": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_direction": {
+                                                        "type": "string"
+                                                    },
+                                                    "preference_arabic_script": {
+                                                        "type": "string"
+                                                    },
+                                                    "custom": {
+                                                        "type": "string"
+                                                    }
+                                                }
                                             }
                                         }
                                     }
